--- a/projects/admin/src/locale/messages.xlf
+++ b/projects/admin/src/locale/messages.xlf
@@ -63,6 +63,10 @@
           <context context-type="sourcefile">projects/admin/src/app/translations/teacher.ts</context>
           <context context-type="linenumber">6</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/user.ts</context>
+          <context context-type="linenumber">6</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="2762019826978432378" datatype="html">
         <source>course</source>
@@ -163,6 +167,10 @@
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/translations/course.ts</context>
           <context context-type="linenumber">8</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/path-instance.ts</context>
+          <context context-type="linenumber">13</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/translations/student-path-instance.ts</context>
@@ -312,36 +320,39 @@
           <context context-type="linenumber">9</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="4809196861118879526" datatype="html">
-        <source>password</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">projects/admin/src/app/translations/student.ts</context>
-          <context context-type="linenumber">7</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">projects/admin/src/app/translations/teacher.ts</context>
-          <context context-type="linenumber">7</context>
-        </context-group>
-      </trans-unit>
       <trans-unit id="2488835981411675381" datatype="html">
         <source>paths</source>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/translations/student.ts</context>
-          <context context-type="linenumber">9</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="4425959074279579115" datatype="html">
-        <source>phone</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">projects/admin/src/app/translations/teacher.ts</context>
           <context context-type="linenumber">8</context>
         </context-group>
       </trans-unit>
       <trans-unit id="7315714079098881460" datatype="html">
         <source>email</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">projects/admin/src/app/translations/teacher.ts</context>
+          <context context-type="sourcefile">projects/admin/src/app/translations/user.ts</context>
+          <context context-type="linenumber">7</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="4809196861118879526" datatype="html">
+        <source>password</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/user.ts</context>
+          <context context-type="linenumber">8</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="2347724151568473592" datatype="html">
+        <source>language</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/user.ts</context>
           <context context-type="linenumber">9</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="5584623107240304279" datatype="html">
+        <source>roles</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/user.ts</context>
+          <context context-type="linenumber">10</context>
         </context-group>
       </trans-unit>
     </body>
