--- a/projects/admin/src/locale/messages.xlf
+++ b/projects/admin/src/locale/messages.xlf
@@ -161,6 +161,10 @@
           <context context-type="sourcefile">projects/admin/src/app/translations/course-instance.ts</context>
           <context context-type="linenumber">19</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/role.ts</context>
+          <context context-type="linenumber">4</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="161784639778555743" datatype="html">
         <source>path</source>
@@ -315,6 +319,10 @@
       </trans-unit>
       <trans-unit id="8066562879192184833" datatype="html">
         <source>student</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/role.ts</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/translations/student-path-instance.ts</context>
           <context context-type="linenumber">9</context>
