--- a/projects/admin/src/locale/messages(ar-${region}).xlf
+++ b/projects/admin/src/locale/messages(ar-${region}).xlf
@@ -184,14 +184,14 @@
       </trans-unit>
       <trans-unit id="7062823674983872135" datatype="html">
         <source>quiz</source>
-        <target state="translated">امتحان</target>
+        <target state="translated">اختبار</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">projects/admin/src/app/translations/course.ts</context>
-          <context context-type="linenumber">10</context>
+          <context context-type="sourcefile">projects/admin/src/json-models/gui-info/quiz.gui-info.ts</context>
+          <context context-type="linenumber">18</context>
         </context-group>
         <context-group purpose="location">
-          <context context-type="sourcefile">projects/admin/src/app/translations/quiz-instance-student.ts</context>
-          <context context-type="linenumber">13</context>
+          <context context-type="sourcefile">projects/admin/src/models/gui-info/quiz-instance-student.gui-info.ts</context>
+          <context context-type="linenumber">31</context>
         </context-group>
       </trans-unit>
       <trans-unit id="8640257554156088424" datatype="html">
@@ -452,18 +452,18 @@
       </trans-unit>
       <trans-unit id="7895033151316369519" datatype="html">
         <source>quiz instance</source>
-        <target state="translated">امتحان</target>
+        <target state="translated">أختبار</target>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/models/gui-info/quiz-instance-student.gui-info.ts</context>
-          <context context-type="linenumber">74</context>
+          <context context-type="linenumber">82</context>
         </context-group>
       </trans-unit>
       <trans-unit id="2154403555693260902" datatype="html">
         <source>quiz instances</source>
-        <target state="translated">امتحانات</target>
+        <target state="translated">أختبارت</target>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/models/gui-info/quiz-instance-student.gui-info.ts</context>
-          <context context-type="linenumber">75</context>
+          <context context-type="linenumber">83</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4419385491509231600" datatype="html">
@@ -632,6 +632,26 @@
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/translations/question-type.ts</context>
           <context context-type="linenumber">5</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="608673774565446711" datatype="html">
+        <source>quizzes</source>
+        <target state="translated">الأختبارات</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/models/gui-info/course.gui-info.ts</context>
+          <context context-type="linenumber">45</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="6404187677846257002" datatype="html">
+        <source>quizzes</source>
+        <target state="translated">الأختبارات</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/json-models/gui-info/quiz.gui-info.ts</context>
+          <context context-type="linenumber">19</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/models/gui-info/course.gui-info.ts</context>
+          <context context-type="linenumber">45</context>
         </context-group>
       </trans-unit>
     </body>
