--- a/projects/admin/src/locale/messages.xlf
+++ b/projects/admin/src/locale/messages.xlf
@@ -2,6 +2,50 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file source-language="en-US" datatype="plaintext" original="ng2.template">
     <body>
+      <trans-unit id="503445309622982213" datatype="html">
+        <source>cancel</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/media-details/media-details.component.html</context>
+          <context context-type="linenumber">8,9</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
+          <context context-type="linenumber">21,22</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
+          <context context-type="linenumber">56,57</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">3</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="8640257554156088424" datatype="html">
+        <source>save</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/media-details/media-details.component.html</context>
+          <context context-type="linenumber">9,10</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">2</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="3249513483374643425" datatype="html">
+        <source>Add</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/media/media.component.ts</context>
+          <context context-type="linenumber">156</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="6041115344061899387" datatype="html">
+        <source>Rename</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/media/media.component.ts</context>
+          <context context-type="linenumber">225</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="1807066826776143827" datatype="html">
         <source>Edit User Profile</source>
         <context-group purpose="location">
@@ -77,42 +121,23 @@
           <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
           <context context-type="linenumber">20,21</context>
         </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
-          <context context-type="linenumber">54,55</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="503445309622982213" datatype="html">
-        <source>cancel</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
-          <context context-type="linenumber">21,22</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
-          <context context-type="linenumber">55,56</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
-          <context context-type="linenumber">3</context>
-        </context-group>
       </trans-unit>
       <trans-unit id="1082022058906746619" datatype="html">
         <source>reset password</source>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
-          <context context-type="linenumber">29,30</context>
+          <context context-type="linenumber">28,29</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4809196861118879526" datatype="html">
         <source>password</source>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
-          <context context-type="linenumber">31</context>
+          <context context-type="linenumber">30</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
-          <context context-type="linenumber">38</context>
+          <context context-type="linenumber">37</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/models/gui-info/user.gui-info.ts</context>
@@ -123,14 +148,14 @@
         <source> Password should be at least 6 characters </source>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
-          <context context-type="linenumber">34</context>
+          <context context-type="linenumber">33</context>
         </context-group>
       </trans-unit>
       <trans-unit id="933475654185758725" datatype="html">
         <source>Confirm Your Password</source>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
-          <context context-type="linenumber">43,44</context>
+          <context context-type="linenumber">42,43</context>
         </context-group>
         <note priority="1" from="description">Confirm Your Password</note>
       </trans-unit>
@@ -138,14 +163,14 @@
         <source>Passwords do not match</source>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
-          <context context-type="linenumber">48</context>
+          <context context-type="linenumber">47</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="8640257554156088424" datatype="html">
-        <source>save</source>
+      <trans-unit id="3364132489339234725" datatype="html">
+        <source> confirm </source>
         <context-group purpose="location">
-          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
-          <context context-type="linenumber">2</context>
+          <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
+          <context context-type="linenumber">54,55</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3526205892584451052" datatype="html">
